# agentic_inc_mgmt_demo_1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  reference_data.py
app/services/: assistant.py  db.py  embeddings.py  incidents.py  ingestion.py  retrieval.py
app/static/: chat.html
data/incidents/: INC0010241.json  INC0010242.json  INC0010243.json  INC0010244.json  INC0010245.json  INC0010301.json  INC0010302.json  INC0010303.json  INC0010304.json  INC0010305.json  INC0010306.json  INC0010307.json  INC0010308.json
docs/: project_plan.md
tests/: conftest.py  test_api.py  test_assistant.py  test_datastore_retrieval.py  test_incidents.py
