[project]
name = "incident_management_assistant"
version = "0.1.0"
description = "Prototype Gen AI Incident Management Assistant for Dynamics 365 CRM incidents"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "pydantic-settings>=2.6.0",
    "sqlite-vec>=0.1.6",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
